kube/deployment.yaml
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: katalogize-config
#data:
#  host: katalogize-api
#  database: katalogize-mongodb
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katalogize-api
  labels:
    app: katalogize-api
spec:
  selector:
    matchLabels:
      app: katalogize-api
  replicas: 1
  template:
    metadata:
      labels:
        app: katalogize-api
    spec:
      containers:
        - name: katalogize-api
          image: us.gcr.io/katalogize/spring-katalogize:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "300Mi"
              cpu: "50m"
            limits:
              memory: "600Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 10
          ports:
            - containerPort: 8080
