kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: katalogize-api
spec:
  selector:
    app: katalogize-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
